keycloak/Ingress.yaml
# kubectl apply -n helix-core -f - ingress.yaml <<EOF
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - portainer.helix.local
    secretName: helix-wildcard-tls
  rules:
  - host: portainer.helix.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer-service
            port:
              number: 9000
